cmake_minimum_required(VERSION 3.10.2)

file(GLOB SRC_FILES *.cpp)

add_library(dir35859 SHARED ${SRC_FILES} )
add_subdirectory(dir35860)
add_subdirectory(dir36006)
add_subdirectory(dir36113)
add_subdirectory(dir36846)
add_subdirectory(dir36905)
add_subdirectory(dir37014)
add_subdirectory(dir37982)
add_subdirectory(dir38124)
add_subdirectory(dir38267)
add_subdirectory(dir38419)
set_source_files_properties(file38440.cpp PROPERTIES COMPILE_FLAGS -Dfile38440)

set_source_files_properties(file38441.cpp PROPERTIES COMPILE_FLAGS -Dfile38441)

set_source_files_properties(file38442.cpp PROPERTIES COMPILE_FLAGS -Dfile38442)

set_source_files_properties(file38443.cpp PROPERTIES COMPILE_FLAGS -Dfile38443)

set_source_files_properties(file38444.cpp PROPERTIES COMPILE_FLAGS -Dfile38444)

set_source_files_properties(file38445.cpp PROPERTIES COMPILE_FLAGS -Dfile38445)

set_source_files_properties(file38446.cpp PROPERTIES COMPILE_FLAGS -Dfile38446)

set_source_files_properties(file38447.cpp PROPERTIES COMPILE_FLAGS -Dfile38447)

set_source_files_properties(file38448.cpp PROPERTIES COMPILE_FLAGS -Dfile38448)

set_source_files_properties(file38449.cpp PROPERTIES COMPILE_FLAGS -Dfile38449)

set_source_files_properties(file38450.cpp PROPERTIES COMPILE_FLAGS -Dfile38450)

set_source_files_properties(file38451.cpp PROPERTIES COMPILE_FLAGS -Dfile38451)

set_source_files_properties(file38452.cpp PROPERTIES COMPILE_FLAGS -Dfile38452)

set_source_files_properties(file38453.cpp PROPERTIES COMPILE_FLAGS -Dfile38453)

set_source_files_properties(file38454.cpp PROPERTIES COMPILE_FLAGS -Dfile38454)

set_source_files_properties(file38455.cpp PROPERTIES COMPILE_FLAGS -Dfile38455)

set_source_files_properties(file38456.cpp PROPERTIES COMPILE_FLAGS -Dfile38456)

set_source_files_properties(file38457.cpp PROPERTIES COMPILE_FLAGS -Dfile38457)

set_source_files_properties(file38458.cpp PROPERTIES COMPILE_FLAGS -Dfile38458)

set_source_files_properties(file38459.cpp PROPERTIES COMPILE_FLAGS -Dfile38459)

set_source_files_properties(file38460.cpp PROPERTIES COMPILE_FLAGS -Dfile38460)

set_source_files_properties(file38461.cpp PROPERTIES COMPILE_FLAGS -Dfile38461)

set_source_files_properties(file38462.cpp PROPERTIES COMPILE_FLAGS -Dfile38462)

set_source_files_properties(file38463.cpp PROPERTIES COMPILE_FLAGS -Dfile38463)

set_source_files_properties(file38464.cpp PROPERTIES COMPILE_FLAGS -Dfile38464)

set_source_files_properties(file38465.cpp PROPERTIES COMPILE_FLAGS -Dfile38465)

set_source_files_properties(file38466.cpp PROPERTIES COMPILE_FLAGS -Dfile38466)

set_source_files_properties(file38467.cpp PROPERTIES COMPILE_FLAGS -Dfile38467)

set_source_files_properties(file38468.cpp PROPERTIES COMPILE_FLAGS -Dfile38468)

set_source_files_properties(file38469.cpp PROPERTIES COMPILE_FLAGS -Dfile38469)

set_source_files_properties(file38470.cpp PROPERTIES COMPILE_FLAGS -Dfile38470)

set_source_files_properties(file38471.cpp PROPERTIES COMPILE_FLAGS -Dfile38471)

set_source_files_properties(file38472.cpp PROPERTIES COMPILE_FLAGS -Dfile38472)

set_source_files_properties(file38473.cpp PROPERTIES COMPILE_FLAGS -Dfile38473)

set_source_files_properties(file38474.cpp PROPERTIES COMPILE_FLAGS -Dfile38474)

set_source_files_properties(file38475.cpp PROPERTIES COMPILE_FLAGS -Dfile38475)

set_source_files_properties(file38476.cpp PROPERTIES COMPILE_FLAGS -Dfile38476)

set_source_files_properties(file38477.cpp PROPERTIES COMPILE_FLAGS -Dfile38477)

set_source_files_properties(file38478.cpp PROPERTIES COMPILE_FLAGS -Dfile38478)

set_source_files_properties(file38479.cpp PROPERTIES COMPILE_FLAGS -Dfile38479)

set_source_files_properties(file38480.cpp PROPERTIES COMPILE_FLAGS -Dfile38480)

set_source_files_properties(file38481.cpp PROPERTIES COMPILE_FLAGS -Dfile38481)

set_source_files_properties(file38482.cpp PROPERTIES COMPILE_FLAGS -Dfile38482)

set_source_files_properties(file38483.cpp PROPERTIES COMPILE_FLAGS -Dfile38483)

set_source_files_properties(file38484.cpp PROPERTIES COMPILE_FLAGS -Dfile38484)

set_source_files_properties(file38485.cpp PROPERTIES COMPILE_FLAGS -Dfile38485)

set_source_files_properties(file38486.cpp PROPERTIES COMPILE_FLAGS -Dfile38486)

set_source_files_properties(file38487.cpp PROPERTIES COMPILE_FLAGS -Dfile38487)

set_source_files_properties(file38488.cpp PROPERTIES COMPILE_FLAGS -Dfile38488)

set_source_files_properties(file38489.cpp PROPERTIES COMPILE_FLAGS -Dfile38489)

set_source_files_properties(file38490.cpp PROPERTIES COMPILE_FLAGS -Dfile38490)

set_source_files_properties(file38491.cpp PROPERTIES COMPILE_FLAGS -Dfile38491)

set_source_files_properties(file38492.cpp PROPERTIES COMPILE_FLAGS -Dfile38492)

set_source_files_properties(file38493.cpp PROPERTIES COMPILE_FLAGS -Dfile38493)

set_source_files_properties(file38494.cpp PROPERTIES COMPILE_FLAGS -Dfile38494)

set_source_files_properties(file38495.cpp PROPERTIES COMPILE_FLAGS -Dfile38495)

set_source_files_properties(file38496.cpp PROPERTIES COMPILE_FLAGS -Dfile38496)

set_source_files_properties(file38497.cpp PROPERTIES COMPILE_FLAGS -Dfile38497)

set_source_files_properties(file38498.cpp PROPERTIES COMPILE_FLAGS -Dfile38498)

set_source_files_properties(file38499.cpp PROPERTIES COMPILE_FLAGS -Dfile38499)

set_source_files_properties(file38500.cpp PROPERTIES COMPILE_FLAGS -Dfile38500)

set_source_files_properties(file38501.cpp PROPERTIES COMPILE_FLAGS -Dfile38501)

set_source_files_properties(file38502.cpp PROPERTIES COMPILE_FLAGS -Dfile38502)

set_source_files_properties(file38503.cpp PROPERTIES COMPILE_FLAGS -Dfile38503)
