cmake_minimum_required(VERSION 3.10.2)

file(GLOB SRC_FILES *.cpp)

add_library(dir38504 SHARED ${SRC_FILES} )
set_source_files_properties(file38505.cpp PROPERTIES COMPILE_FLAGS -Dfile38505)

set_source_files_properties(file38506.cpp PROPERTIES COMPILE_FLAGS -Dfile38506)

set_source_files_properties(file38507.cpp PROPERTIES COMPILE_FLAGS -Dfile38507)

set_source_files_properties(file38508.cpp PROPERTIES COMPILE_FLAGS -Dfile38508)

set_source_files_properties(file38509.cpp PROPERTIES COMPILE_FLAGS -Dfile38509)

set_source_files_properties(file38510.cpp PROPERTIES COMPILE_FLAGS -Dfile38510)

set_source_files_properties(file38511.cpp PROPERTIES COMPILE_FLAGS -Dfile38511)

set_source_files_properties(file38512.cpp PROPERTIES COMPILE_FLAGS -Dfile38512)

set_source_files_properties(file38513.cpp PROPERTIES COMPILE_FLAGS -Dfile38513)

set_source_files_properties(file38514.cpp PROPERTIES COMPILE_FLAGS -Dfile38514)

set_source_files_properties(file38515.cpp PROPERTIES COMPILE_FLAGS -Dfile38515)

set_source_files_properties(file38516.cpp PROPERTIES COMPILE_FLAGS -Dfile38516)

set_source_files_properties(file38517.cpp PROPERTIES COMPILE_FLAGS -Dfile38517)

set_source_files_properties(file38518.cpp PROPERTIES COMPILE_FLAGS -Dfile38518)

set_source_files_properties(file38519.cpp PROPERTIES COMPILE_FLAGS -Dfile38519)

set_source_files_properties(file38520.cpp PROPERTIES COMPILE_FLAGS -Dfile38520)

set_source_files_properties(file38521.cpp PROPERTIES COMPILE_FLAGS -Dfile38521)

set_source_files_properties(file38522.cpp PROPERTIES COMPILE_FLAGS -Dfile38522)

set_source_files_properties(file38523.cpp PROPERTIES COMPILE_FLAGS -Dfile38523)

set_source_files_properties(file38524.cpp PROPERTIES COMPILE_FLAGS -Dfile38524)

set_source_files_properties(file38525.cpp PROPERTIES COMPILE_FLAGS -Dfile38525)

set_source_files_properties(file38526.cpp PROPERTIES COMPILE_FLAGS -Dfile38526)

set_source_files_properties(file38527.cpp PROPERTIES COMPILE_FLAGS -Dfile38527)

set_source_files_properties(file38528.cpp PROPERTIES COMPILE_FLAGS -Dfile38528)

set_source_files_properties(file38529.cpp PROPERTIES COMPILE_FLAGS -Dfile38529)

set_source_files_properties(file38530.cpp PROPERTIES COMPILE_FLAGS -Dfile38530)

set_source_files_properties(file38531.cpp PROPERTIES COMPILE_FLAGS -Dfile38531)

set_source_files_properties(file38532.cpp PROPERTIES COMPILE_FLAGS -Dfile38532)

set_source_files_properties(file38533.cpp PROPERTIES COMPILE_FLAGS -Dfile38533)

set_source_files_properties(file38534.cpp PROPERTIES COMPILE_FLAGS -Dfile38534)

set_source_files_properties(file38535.cpp PROPERTIES COMPILE_FLAGS -Dfile38535)

set_source_files_properties(file38536.cpp PROPERTIES COMPILE_FLAGS -Dfile38536)

set_source_files_properties(file38537.cpp PROPERTIES COMPILE_FLAGS -Dfile38537)

set_source_files_properties(file38538.cpp PROPERTIES COMPILE_FLAGS -Dfile38538)

set_source_files_properties(file38539.cpp PROPERTIES COMPILE_FLAGS -Dfile38539)

set_source_files_properties(file38540.cpp PROPERTIES COMPILE_FLAGS -Dfile38540)
